[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Hooman/human.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0, -15.0, 0.0 ]
}

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 8, 7.2, 7.4, 8, -7, 8, -7, 7.4, -8, 7.1, -8, -8, 8, -8 )

[node name="Hooman" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="HitBox"]
wait_time = 0.1
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/walk = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="timeout" from="HitBox/Timer" to="." method="_on_Timer_timeout"]
